--- a/README.org
+++ b/README.org
@@ -17,20 +17,17 @@ Easy encrypted your configuration in Clojure using the power of [[https://github
 #+BEGIN_SRC clojure :results nil
   ;; Note: running this multiple time will give different result as =random-hex= is re-generated each time.
   (:require [encrypted-config :refer [str->encrypted] :as ecc])
-
   (ecc/str->encrypted "MyP@ssword!"
                       "MySec$tKey@")
-  ;; =>
-  ;; FYI: input-text      : MyP@ssword!
-  ;; FYI: secret-key*     : MySec$tKey@
-  ;; FYI: random-hex*     : 74da4feae9c06f49f4840a6d610bd3ee
-  ;; FYI: encrypted-text* : 19130b61026ff358b4a3db02334d87c3afaf3da9282e2d6bb90a158df7d0d07f
+
+  ;;=> e.g. (list random-hex encrypted-string)
+  ;;=> (list "74da4feae9c06f49f4840a6d610bd3ee" "19130b61026ff358b4a3db02334d87c3afaf3da9282e2d6bb90a158df7d0d07f")
 #+END_SRC
 
 *** To decrypt the credentials using the previous encrypted keys as parameters
 
 #+BEGIN_SRC clojure :results nil
-  (:require [encrypted-config :refer [str->decrypted str->encrypted] :as ecc])
+  (:require [encrypted-config :refer [str->decrypted] :as ecc])
   (ecc/str->decrypted "19130b61026ff358b4a3db02334d87c3afaf3da9282e2d6bb90a158df7d0d07f"
                       "MySec$tKey@"
                       "74da4feae9c06f49f4840a6d610bd3ee")
